<resources>
    <string name="app_name">Tuckar</string>
    <string name="image">image</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="our_story">Our Story</string>
    <string name="contact_us">Contact Us</string>
    <string name="login">Login</string>
    <string name="enter_property_id">Enter Property ID</string>
    <string name="opned">Opened</string>
    <string name="closed">Closed</string>
    <string name="add_property">Add Property</string>
    <string name="buy">Buy</string>
    <string name="invest">Invest</string>
    <string name="reset_filters">Reset Filters</string>
    <string name="select_city">Select City</string>
    <string name="select_area">Select Area</string>
    <string name="house">House</string>
    <string name="all_property_types">All Property Types</string>
    <string name="enter_city_area_or_project_name">City, area or project name</string>
    <string name="tag">tag</string>
    <string name="cancel">Cancel</string>
    <string name="dummy_title">Muree Enclaves Patriata</string>
    <string name="dummy_city">Muree</string>
    <string name="starting_from">Starting from</string>
    <string name="price_dummy">Rs: 11.5 lac</string>
    <string name="dummy_description">Saeed Property Center is a real estate agency based in F-6, dealing mainly in CDA managed sectors. Saeed Property Center brings over a decade of experience to provide its clients with superior services in the sale, purchase and rent of residential and commercial properties. It prides itself in maintaining its reputation as one of the leading real estate agencies in Islamabad. Saeed Property Center proactively works towards building long term relationships with clients, by offering personalized service, and prioritizing customer satisfaction.</string>
    <string name="location">Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="by_clicking_regiser_agree">By clicking register button you agree to company</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="register">Register</string>
    <string name="year">Year</string>
    <string name="title">Title</string>
    <string name="head_office">Head Office</string>
    <string name="address">Address</string>
    <string name="schedule">Schedule</string>
    <string name="request_info">Request Info</string>
    <string name="get_directions">Get Directions</string>
    <string name="tuckar_email">info@tuckar.com</string>
    <string name="tuckar_phone">+92 300 0000 000</string>
    <string name="tuckar_schedule_open">Monday - Saturday: 8:00 AM - 6:00 PM. Sunday: CLOSED</string>
    <string name="tuckar_address">Islamabad, Pakistan.</string>
    <string name="tuckar_website_address"><u>https://www.tuckar.com/</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="write_your_message">Write your message…</string>
    <string name="uri_phone_call">tel:</string>
    <string name="dismiss">Dismiss</string>
    <string name="incorrect_phone_format">Phone Number Format is Invalid!</string>
    <string name="mobile_not_found">Mobile no. Not Found.</string>
    <string name="last_name">Last Name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="update">Update</string>
    <string name="listings">Listings</string>
    <string name="account_settings">Account Settings</string>
    <string name="buy_credits">Buy Credits</string>
    <string name="standard_credits">Standard Credits</string>
    <string name="refresh_credits">Refresh Credits</string>
    <string name="premium_plus_credits">Premium Plus Credits</string>
    <string name="premium_credits">Premium Credits</string>
    <string name="place_order">Place Order</string>
    <string name="credits_history">Credits History</string>
    <string name="select_picture">Select Picture</string>
    <string name="select_action">Select Action</string>
    <string name="choose_photo_from_gallery">Choose photo from gallery…</string>
    <string name="take_photo_from_camera">Take photo from camera…</string>
    <string name="remove_photo">Remove Photo…</string>
    <string name="properties">Properties</string>
    <string name="projects">Projects</string>
    <string name="saved">Saved</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="reset">Reset</string>
    <string name="sale">Sale</string>
    <string name="rent">Rent</string>
    <string name="add_a_custom_title">Add a custom title</string>
    <string name="enter_custom_title">Enter Custom Title</string>
    <string name="custom_title">Custom Title</string>
    <string name="listing_type">Listing Type</string>
    <string name="standard">Standard</string>
    <string name="credits_remaining">Credits Remaining</string>
    <string name="zero">0</string>
    <string name="premium">Premium</string>
    <string name="premium_plus">Premium Plus</string>
    <string name="price_in_rupees">Price in Rupees</string>
    <string name="enter_price">Enter Price</string>
    <string name="description">Description</string>
    <string name="display_address_on_listing">Display address on listing</string>
    <string name="area_details">Area Details</string>
    <string name="area_occupied">Area Occupied</string>
    <string name="contact_information">Contact Information</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="submit">Submit</string>
    <string name="unit">Unit</string>
    <string name="use_tuckar_generated_title">Use Tuckar Generated Title</string>
    <string name="filters">Filters</string>
    <string name="property_type">Property Type</string>
    <string name="type">Type:&#160;</string>
    <string name="subtype">Subtype:&#160;</string>
    <string name="any">Any</string>
    <string name="new_search">New Search</string>
    <string name="residential">Residential</string>
    <string name="plot">Plot</string>
    <string name="commercial">Commercial</string>
    <string name="all_types">All Types</string>
    <string name="done">Done</string>
    <string name="price_range">Price Range</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="show_listings_with_images">Show listings with images only</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>
    <string name="enter_min_price">Enter Min Price</string>
    <string name="enter_max_price">Enter Max Price</string>
    <string name="close">Close</string>
    <string name="null_text">Null</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="logout_message">Are you sure you want to Logout?</string>
    <string name="minimum_price_cannot_greater">Minimum price cannot be greater than maximum price.</string>
    <string name="rs">Rs</string>
    <string name="general_info">General Info</string>
    <string name="reset_password">Reset Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>

    <string-array name="area_units_array">
        <item>Unit</item>
        <item>Yd<sup>2</sup></item>
        <item>Ft<sup>2</sup></item>
        <item>M<sup>2</sup></item>
        <item>Kanal</item>
        <item>Marla</item>
    </string-array>
    <string-array name="min_area_array">
        <item>Any</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>12</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
    </string-array>
    <string-array name="max_area_array">
        <item>Any</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>12</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
        <item>200</item>
    </string-array>

    <string-array name="residential_property_types_array">
        <item>Any</item>
        <item>House</item>
        <item>Apartment</item>
        <item>Upper portion</item>
        <item>Lower portion</item>
        <item>Farm house</item>
        <item>Room</item>
        <item>Penthouse</item>
        <item>Hotel suites</item>
        <item>Basement</item>
        <item>Annexe</item>
        <item>Hostel</item>
        <item>Other</item>
    </string-array>
    <string-array name="plot_property_types_array">
        <item>Any</item>
        <item>Residential plot</item>
        <item>Commercial plot</item>
        <item>Agricultural land</item>
        <item>Industrial land</item>
        <item>Plot file</item>
        <item>Farmhouse plot</item>
    </string-array>

    <string-array name="commercial_property_types_array">
        <item>Any</item>
        <item>Office</item>
        <item>Shop</item>
        <item>Warehouse</item>
        <item>Factory</item>
        <item>Building</item>
        <item>Other</item>
    </string-array>

</resources>
