<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context=".activities.NewSearchActivity">

        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:stretchColumns="*">

            <TableRow>

                <TextView
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/reset"
                    android:textStyle="bold" />

                <TextView
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/filters"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/cancel"
                    android:textStyle="bold" />
            </TableRow>

            <!-- ***********  BUY / RENT  *********** -->

            <TableRow>

                <Button
                    android:id="@+id/bt_buy"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_view_on_click"
                    android:gravity="center"
                    android:onClick="btBuyOnClick"
                    android:text="@string/buy"
                    android:textColor="@color/logoRed"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bt_rent"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="btRentOnClick"
                    android:text="@string/rent"
                    android:textColor="@color/logoRed"
                    android:textStyle="bold" />
            </TableRow>

            <include
                layout="@layout/layout_divider_horizontal_light_grey"
                android:layout_width="match_parent"
                android:layout_height="1dp" />
        </TableLayout>


        <!-- ***********  Property Type  *********** -->
        <include
            layout="@layout/layout_divider_horizontal_light_grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/offWhite">

            <LinearLayout
                android:id="@+id/ll_property_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="llPropertyTypeOnClick"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/property_type"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type" />

                    <TextView
                        android:id="@+id/tv_property_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/any"
                        android:textColor="@color/green"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/subtype" />

                    <TextView
                        android:id="@+id/tv_property_subtype"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/any"
                        android:textColor="@color/green"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <TableLayout
                android:id="@+id/table_layout_select_property_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioGroup
                    android:id="@+id/rg_property_type"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_residential"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/residential"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/rb_plot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plot"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/rb_commercial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/commercial"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/rb_all_types"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/all_types"
                        android:textSize="12sp" />
                </RadioGroup>

                <Spinner
                    android:id="@+id/sp_property_subtype"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:padding="4dp"
                    android:visibility="gone" />

                <Button
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/round_bg_white_stroke_red_logo"
                    android:onClick="donePropertyTypeOnClick"
                    android:text="@string/done"
                    android:textAllCaps="false"
                    android:textColor="@color/logoRed" />
            </TableLayout>
        </android.support.constraint.ConstraintLayout>

        <include
            layout="@layout/layout_divider_horizontal_light_grey"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <!-- ***********  Price Range  *********** -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/offWhite"
            android:gravity="center"
            android:onClick="priceRangeOnClick"
            android:orientation="vertical">

            <include layout="@layout/layout_divider_horizontal_light_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/price_range"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_price_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/any"
                android:textColor="@color/green"
                android:textStyle="bold" />

            <include layout="@layout/layout_divider_horizontal_light_grey" />
        </LinearLayout>
        <!-- ***********  Location  *********** -->
        <include
            layout="@layout/layout_divider_horizontal_light_grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/offWhite"
            android:gravity="center"
            android:padding="8dp"
            android:stretchColumns="*">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textStyle="bold" />

            <TableRow>

                <TextView
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/round_bg_white_stroke_light_grey"
                    android:drawableEnd="@drawable/ic_arrow_drop_down"
                    android:padding="8dp"
                    android:text="@string/select_city" />

                <TextView
                    android:layout_marginStart="2dp"
                    android:background="@drawable/round_bg_white_stroke_light_grey"
                    android:drawableEnd="@drawable/ic_arrow_drop_down"
                    android:padding="8dp"
                    android:text="@string/select_area" />
            </TableRow>

        </TableLayout>

        <include layout="@layout/layout_divider_horizontal_light_grey" />
        <!-- ***********  Area Details  *********** -->
        <include
            layout="@layout/layout_divider_horizontal_light_grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/offWhite"
            android:gravity="center"
            android:padding="8dp"
            android:stretchColumns="*">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_details"
                android:textStyle="bold" />

            <TableRow android:gravity="center">

                <TextView android:text="@string/unit" />

                <TextView
                    android:layout_marginStart="8dp"
                    android:text="@string/min" />

                <TextView
                    android:layout_marginStart="8dp"
                    android:text="@string/max" />
            </TableRow>

            <TableRow>

                <Spinner
                    android:background="@drawable/round_bg_white_stroke_light_grey"
                    android:dropDownSelector="@drawable/ic_arrow_drop_down"
                    android:entries="@array/area_units_array"
                    android:padding="8dp" />

                <Spinner
                    android:layout_marginStart="8dp"
                    android:background="@drawable/round_bg_white_stroke_light_grey"
                    android:entries="@array/min_area_array"
                    android:padding="8dp" />

                <Spinner
                    android:layout_marginStart="8dp"
                    android:background="@drawable/round_bg_white_stroke_light_grey"
                    android:entries="@array/max_area_array"
                    android:padding="8dp" />
            </TableRow>
        </TableLayout>

        <include layout="@layout/layout_divider_horizontal_light_grey" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/show_listings_with_images" />

        <!-- ***********  Submit  *********** -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/logoRed"
            android:gravity="center">

            <Button
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/logoRed"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="4dp"
                android:padding="16dp"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>